--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h4>Radhe Radhe 🦚💟</h4>
    
     <a href="/Html/index2.html" ><button >Click for surprises 😋</button></a>
-    <script src="/js/Time.js">
+    <script src="Time.js">
        
     </script>
 </body>
