--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/Css/styles.css" />
+  <link rel="stylesheet" href="styles.css" />
   <meta http-equiv="refresh" content="">
   <title>Lavender Hearts Page</title>
 </head>
@@ -14,11 +14,11 @@
     <div id="typedText" class="blinking-cursor"></div>
     <div id="CTC">Click to continue</div>
 
-    <a href="/Html/Celebration.html" id="celebrateBtn">
+    <a href="Celebration.html" id="celebrateBtn">
       <button>Click here for celebrations 😋</button>
     </a>
   </div>
 
-  <script src="/js/script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
