--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1 id="greeting"></h1>
     <h4>Radhe Radhe 🦚💟</h4>
    
-    <a href="/Html/index2.html" ><button >Click for surprises 😋</button></a>
+    <a href="index2.html" ><button >Click for surprises 😋</button></a>
     <script src="Time.js">
        
     </script>
