--- a/Celebration.html
+++ b/Celebration.html
@@ -14,7 +14,7 @@
   />
 
   <!-- Styles -->
-  <link rel="stylesheet" href="/css/celebration.css" />
+  <link rel="stylesheet" href="celebration.css" />
 </head>
 <body>
   <header>
@@ -49,7 +49,7 @@
       <canvas id="confetti"></canvas>
 
       <!-- letter link appears after blow -->
-      <a id="letter-link" class="hidden" href="/Html/Card.html">Read your special letter 💌</a>
+      <a id="letter-link" class="hidden" href="Card.html">Read your special letter 💌</a>
     </div>
   </main>
 
@@ -62,6 +62,6 @@
   <audio  src="/happy-birthday-music-box(chosic.com).mp3" autoplay loop> </audio>
 
   <!-- Script -->
-  <script src="/js/celebration.js"></script>
+  <script src="celebration.js"></script>
 </body>
 </html>
